src/y.output
Terminals unused in grammar

   T_BIT_NOT_EQUALS
   T_UNTERM_STRING
   T_UNTERM_COMMENT


Grammar

    0 $accept: root $end

    1 root: root_declare_list

    2 root_declare_list: root_declare_list root_declare
    3                  | %empty

    4 root_declare: type T_IDENT '(' param_list ')' ';'
    5             | type T_IDENT '(' param_list ')' statement_block
    6             | type T_IDENT ';'
    7             | type T_IDENT '[' T_INT_CONST ']' ';'
    8             | type T_IDENT '=' constant ';'
    9             | T_STRUCT T_IDENT '{' struct_list '}' ';'
   10             | T_STRUCT T_IDENT ';'

   11 constant: T_INT_CONST
   12         | T_STR_CONST

   13 param_list: non_empty_param_list
   14           | %empty

   15 non_empty_param_list: non_empty_param_list ',' param
   16                     | param

   17 param: type T_IDENT

   18 struct_list: struct_list struct_member ';'
   19            | %empty

   20 struct_member: type T_IDENT

   21 type: type '*'
   22     | T_STRUCT T_IDENT
   23     | T_INT_TYPE
   24     | T_VOID_TYPE
   25     | T_STRING_TYPE

   26 statement_block: '{' statement_list '}'

   27 statement_list: statement_list statement
   28               | %empty

   29 statement: expression ';'
   30          | type T_IDENT ';'
   31          | type T_IDENT '=' expression ';'
   32          | type T_IDENT '[' T_INT_CONST ']' ';'
   33          | T_WHILE '(' expression ')' statement
   34          | T_DO statement T_WHILE '(' expression ')' ';'
   35          | T_FOR '(' expression ';' expression ';' expression ')' statement
   36          | statement_block
   37          | T_IF '(' expression ')' statement
   38          | T_IF '(' expression ')' statement T_ELSE statement
   39          | T_BREAK ';'
   40          | T_CONTINUE ';'
   41          | T_SWITCH '(' expression ')' '{' statement_list '}'
   42          | T_CASE T_INT_CONST ':'
   43          | T_DEFAULT ':'
   44          | T_RETURN expression ';'

   45 expression: expression '=' expression
   46           | expression T_PLUS_EQUALS expression
   47           | expression T_MINUS_EQUALS expression
   48           | expression T_STAR_EQUALS expression
   49           | expression T_DIV_EQUALS expression
   50           | expression T_MOD_EQUALS expression
   51           | expression T_BIT_AND_EQUALS expression
   52           | expression T_BIT_OR_EQUALS expression
   53           | expression T_BIT_XOR_EQUALS expression
   54           | expression T_LEFT_SHIFT_EQUALS expression
   55           | expression T_RIGHT_SHIFT_EQUALS expression
   56           | expression T_PLUS_PLUS
   57           | T_PLUS_PLUS expression
   58           | expression T_MINUS_MINUS
   59           | T_MINUS_MINUS expression
   60           | constant
   61           | '(' expression ')'
   62           | T_IDENT '(' argument_list ')'
   63           | T_SIZEOF '(' type ')'
   64           | '!' expression
   65           | '~' expression
   66           | '+' expression
   67           | '-' expression
   68           | '*' expression
   69           | '&' expression
   70           | expression '+' expression
   71           | expression '-' expression
   72           | expression '*' expression
   73           | expression '/' expression
   74           | expression '%' expression
   75           | expression '&' expression
   76           | expression '|' expression
   77           | expression '^' expression
   78           | expression T_BOOL_AND expression
   79           | expression T_BOOL_OR expression
   80           | expression T_LEFT_SHIFT expression
   81           | expression T_RIGHT_SHIFT expression
   82           | expression T_EQUAL expression
   83           | expression T_NOT_EQUAL expression
   84           | expression '<' expression
   85           | expression '>' expression
   86           | expression T_LESS_OR_EQUAL expression
   87           | expression T_GREATER_OR_EQUAL expression
   88           | T_IDENT
   89           | expression '.' T_IDENT
   90           | expression T_ARROW T_IDENT
   91           | expression '[' expression ']'

   92 argument_list: non_empty_argument_list
   93              | %empty

   94 non_empty_argument_list: non_empty_argument_list ',' expression
   95                        | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'%' (37) 74
'&' (38) 69 75
'(' (40) 4 5 33 34 35 37 38 41 61 62 63
')' (41) 4 5 33 34 35 37 38 41 61 62 63
'*' (42) 21 68 72
'+' (43) 66 70
',' (44) 15 94
'-' (45) 67 71
'.' (46) 89
'/' (47) 73
':' (58) 42 43
';' (59) 4 6 7 8 9 10 18 29 30 31 32 34 35 39 40 44
'<' (60) 84
'=' (61) 8 31 45
'>' (62) 85
'[' (91) 7 32 91
']' (93) 7 32 91
'^' (94) 77
'{' (123) 9 26 41
'|' (124) 76
'}' (125) 9 26 41
'~' (126) 65
error (256)
T_IDENT (258) 4 5 6 7 8 9 10 17 20 22 30 31 32 62 88 89 90
T_STR_CONST (259) 12
T_INT_CONST (260) 7 11 32 42
T_IF (261) 37 38
T_ELSE (262) 38
T_FOR (263) 35
T_WHILE (264) 33 34
T_DO (265) 34
T_SIZEOF (266) 63
T_INT_TYPE (267) 23
T_STRING_TYPE (268) 25
T_VOID_TYPE (269) 24
T_STRUCT (270) 9 10 22
T_RETURN (271) 44
T_SWITCH (272) 41
T_CASE (273) 42
T_DEFAULT (274) 43
T_BREAK (275) 39
T_CONTINUE (276) 40
T_BOOL_OR (277) 79
T_BOOL_AND (278) 78
T_LEFT_SHIFT (279) 80
T_RIGHT_SHIFT (280) 81
T_PLUS_EQUALS (281) 46
T_MINUS_EQUALS (282) 47
T_STAR_EQUALS (283) 48
T_DIV_EQUALS (284) 49
T_MOD_EQUALS (285) 50
T_EQUAL (286) 82
T_LESS_OR_EQUAL (287) 86
T_GREATER_OR_EQUAL (288) 87
T_NOT_EQUAL (289) 83
T_BIT_OR_EQUALS (290) 52
T_BIT_AND_EQUALS (291) 51
T_BIT_XOR_EQUALS (292) 53
T_BIT_NOT_EQUALS (293)
T_ARROW (294) 90
T_LEFT_SHIFT_EQUALS (295) 54
T_RIGHT_SHIFT_EQUALS (296) 55
T_PLUS_PLUS (297) 56 57
T_MINUS_MINUS (298) 58 59
T_UNTERM_STRING (299)
T_UNTERM_COMMENT (300)
PREC_ADDRESS (301)
PREC_DEREFERENCE (302)
PREC_UNARY_MINUS (303)
PREC_UNARY_PLUS (304)
PREC_SUFFIX_PLUS_PLUS (305)
PREC_SUFFIX_MINUS_MINUS (306)
PREC_PREFIX_PLUS_PLUS (307)
PREC_PREFIX_MINUS_MINUS (308)
PREC_APPLICATION (309)


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
root (79)
    on left: 1, on right: 0
root_declare_list (80)
    on left: 2 3, on right: 1 2
root_declare (81)
    on left: 4 5 6 7 8 9 10, on right: 2
constant (82)
    on left: 11 12, on right: 8 60
param_list (83)
    on left: 13 14, on right: 4 5
non_empty_param_list (84)
    on left: 15 16, on right: 13 15
param (85)
    on left: 17, on right: 15 16
struct_list (86)
    on left: 18 19, on right: 9 18
struct_member (87)
    on left: 20, on right: 18
type (88)
    on left: 21 22 23 24 25, on right: 4 5 6 7 8 17 20 21 30 31 32
    63
statement_block (89)
    on left: 26, on right: 5 36
statement_list (90)
    on left: 27 28, on right: 26 27 41
statement (91)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right:
    27 33 34 35 37 38
expression (92)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90 91, on right: 29 31 33 34 35 37 38 41 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 61 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 89 90 91
    94 95
argument_list (93)
    on left: 92 93, on right: 62
non_empty_argument_list (94)
    on left: 94 95, on right: 92 94


State 0

    0 $accept: . root $end

    $default  reduce using rule 3 (root_declare_list)

    root               go to state 1
    root_declare_list  go to state 2


State 1

    0 $accept: root . $end

    $end  shift, and go to state 3


State 2

    1 root: root_declare_list .
    2 root_declare_list: root_declare_list . root_declare

    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 7

    $default  reduce using rule 1 (root)

    root_declare  go to state 8
    type          go to state 9


State 3

    0 $accept: root $end .

    $default  accept


State 4

   23 type: T_INT_TYPE .

    $default  reduce using rule 23 (type)


State 5

   25 type: T_STRING_TYPE .

    $default  reduce using rule 25 (type)


State 6

   24 type: T_VOID_TYPE .

    $default  reduce using rule 24 (type)


State 7

    9 root_declare: T_STRUCT . T_IDENT '{' struct_list '}' ';'
   10             | T_STRUCT . T_IDENT ';'
   22 type: T_STRUCT . T_IDENT

    T_IDENT  shift, and go to state 10


State 8

    2 root_declare_list: root_declare_list root_declare .

    $default  reduce using rule 2 (root_declare_list)


State 9

    4 root_declare: type . T_IDENT '(' param_list ')' ';'
    5             | type . T_IDENT '(' param_list ')' statement_block
    6             | type . T_IDENT ';'
    7             | type . T_IDENT '[' T_INT_CONST ']' ';'
    8             | type . T_IDENT '=' constant ';'
   21 type: type . '*'

    T_IDENT  shift, and go to state 11
    '*'      shift, and go to state 12


State 10

    9 root_declare: T_STRUCT T_IDENT . '{' struct_list '}' ';'
   10             | T_STRUCT T_IDENT . ';'
   22 type: T_STRUCT T_IDENT .

    ';'  shift, and go to state 13
    '{'  shift, and go to state 14

    $default  reduce using rule 22 (type)


State 11

    4 root_declare: type T_IDENT . '(' param_list ')' ';'
    5             | type T_IDENT . '(' param_list ')' statement_block
    6             | type T_IDENT . ';'
    7             | type T_IDENT . '[' T_INT_CONST ']' ';'
    8             | type T_IDENT . '=' constant ';'

    '='  shift, and go to state 15
    '['  shift, and go to state 16
    '('  shift, and go to state 17
    ';'  shift, and go to state 18


State 12

   21 type: type '*' .

    $default  reduce using rule 21 (type)


State 13

   10 root_declare: T_STRUCT T_IDENT ';' .

    $default  reduce using rule 10 (root_declare)


State 14

    9 root_declare: T_STRUCT T_IDENT '{' . struct_list '}' ';'

    $default  reduce using rule 19 (struct_list)

    struct_list  go to state 19


State 15

    8 root_declare: type T_IDENT '=' . constant ';'

    T_STR_CONST  shift, and go to state 20
    T_INT_CONST  shift, and go to state 21

    constant  go to state 22


State 16

    7 root_declare: type T_IDENT '[' . T_INT_CONST ']' ';'

    T_INT_CONST  shift, and go to state 23


State 17

    4 root_declare: type T_IDENT '(' . param_list ')' ';'
    5             | type T_IDENT '(' . param_list ')' statement_block

    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 24

    $default  reduce using rule 14 (param_list)

    param_list            go to state 25
    non_empty_param_list  go to state 26
    param                 go to state 27
    type                  go to state 28


State 18

    6 root_declare: type T_IDENT ';' .

    $default  reduce using rule 6 (root_declare)


State 19

    9 root_declare: T_STRUCT T_IDENT '{' struct_list . '}' ';'
   18 struct_list: struct_list . struct_member ';'

    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 24
    '}'            shift, and go to state 29

    struct_member  go to state 30
    type           go to state 31


State 20

   12 constant: T_STR_CONST .

    $default  reduce using rule 12 (constant)


State 21

   11 constant: T_INT_CONST .

    $default  reduce using rule 11 (constant)


State 22

    8 root_declare: type T_IDENT '=' constant . ';'

    ';'  shift, and go to state 32


State 23

    7 root_declare: type T_IDENT '[' T_INT_CONST . ']' ';'

    ']'  shift, and go to state 33


State 24

   22 type: T_STRUCT . T_IDENT

    T_IDENT  shift, and go to state 34


State 25

    4 root_declare: type T_IDENT '(' param_list . ')' ';'
    5             | type T_IDENT '(' param_list . ')' statement_block

    ')'  shift, and go to state 35


State 26

   13 param_list: non_empty_param_list .
   15 non_empty_param_list: non_empty_param_list . ',' param

    ','  shift, and go to state 36

    $default  reduce using rule 13 (param_list)


State 27

   16 non_empty_param_list: param .

    $default  reduce using rule 16 (non_empty_param_list)


State 28

   17 param: type . T_IDENT
   21 type: type . '*'

    T_IDENT  shift, and go to state 37
    '*'      shift, and go to state 12


State 29

    9 root_declare: T_STRUCT T_IDENT '{' struct_list '}' . ';'

    ';'  shift, and go to state 38


State 30

   18 struct_list: struct_list struct_member . ';'

    ';'  shift, and go to state 39


State 31

   20 struct_member: type . T_IDENT
   21 type: type . '*'

    T_IDENT  shift, and go to state 40
    '*'      shift, and go to state 12


State 32

    8 root_declare: type T_IDENT '=' constant ';' .

    $default  reduce using rule 8 (root_declare)


State 33

    7 root_declare: type T_IDENT '[' T_INT_CONST ']' . ';'

    ';'  shift, and go to state 41


State 34

   22 type: T_STRUCT T_IDENT .

    $default  reduce using rule 22 (type)


State 35

    4 root_declare: type T_IDENT '(' param_list ')' . ';'
    5             | type T_IDENT '(' param_list ')' . statement_block

    ';'  shift, and go to state 42
    '{'  shift, and go to state 43

    statement_block  go to state 44


State 36

   15 non_empty_param_list: non_empty_param_list ',' . param

    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 24

    param  go to state 45
    type   go to state 28


State 37

   17 param: type T_IDENT .

    $default  reduce using rule 17 (param)


State 38

    9 root_declare: T_STRUCT T_IDENT '{' struct_list '}' ';' .

    $default  reduce using rule 9 (root_declare)


State 39

   18 struct_list: struct_list struct_member ';' .

    $default  reduce using rule 18 (struct_list)


State 40

   20 struct_member: type T_IDENT .

    $default  reduce using rule 20 (struct_member)


State 41

    7 root_declare: type T_IDENT '[' T_INT_CONST ']' ';' .

    $default  reduce using rule 7 (root_declare)


State 42

    4 root_declare: type T_IDENT '(' param_list ')' ';' .

    $default  reduce using rule 4 (root_declare)


State 43

   26 statement_block: '{' . statement_list '}'

    $default  reduce using rule 28 (statement_list)

    statement_list  go to state 46


State 44

    5 root_declare: type T_IDENT '(' param_list ')' statement_block .

    $default  reduce using rule 5 (root_declare)


State 45

   15 non_empty_param_list: non_empty_param_list ',' param .

    $default  reduce using rule 15 (non_empty_param_list)


State 46

   26 statement_block: '{' statement_list . '}'
   27 statement_list: statement_list . statement

    T_IDENT        shift, and go to state 47
    T_STR_CONST    shift, and go to state 20
    T_INT_CONST    shift, and go to state 21
    T_IF           shift, and go to state 48
    T_FOR          shift, and go to state 49
    T_WHILE        shift, and go to state 50
    T_DO           shift, and go to state 51
    T_SIZEOF       shift, and go to state 52
    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 24
    T_RETURN       shift, and go to state 53
    T_SWITCH       shift, and go to state 54
    T_CASE         shift, and go to state 55
    T_DEFAULT      shift, and go to state 56
    T_BREAK        shift, and go to state 57
    T_CONTINUE     shift, and go to state 58
    T_PLUS_PLUS    shift, and go to state 59
    T_MINUS_MINUS  shift, and go to state 60
    '&'            shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '*'            shift, and go to state 64
    '!'            shift, and go to state 65
    '~'            shift, and go to state 66
    '('            shift, and go to state 67
    '{'            shift, and go to state 43
    '}'            shift, and go to state 68

    constant         go to state 69
    type             go to state 70
    statement_block  go to state 71
    statement        go to state 72
    expression       go to state 73


State 47

   62 expression: T_IDENT . '(' argument_list ')'
   88           | T_IDENT .

    '('  shift, and go to state 74

    $default  reduce using rule 88 (expression)


State 48

   37 statement: T_IF . '(' expression ')' statement
   38          | T_IF . '(' expression ')' statement T_ELSE statement

    '('  shift, and go to state 75


State 49

   35 statement: T_FOR . '(' expression ';' expression ';' expression ')' statement

    '('  shift, and go to state 76


State 50

   33 statement: T_WHILE . '(' expression ')' statement

    '('  shift, and go to state 77


State 51

   34 statement: T_DO . statement T_WHILE '(' expression ')' ';'

    T_IDENT        shift, and go to state 47
    T_STR_CONST    shift, and go to state 20
    T_INT_CONST    shift, and go to state 21
    T_IF           shift, and go to state 48
    T_FOR          shift, and go to state 49
    T_WHILE        shift, and go to state 50
    T_DO           shift, and go to state 51
    T_SIZEOF       shift, and go to state 52
    T_INT_TYPE     shift, and go to state 4
    T_STRING_TYPE  shift, and go to state 5
    T_VOID_TYPE    shift, and go to state 6
    T_STRUCT       shift, and go to state 24
    T_RETURN       shift, and go to state 53
    T_SWITCH       shift, and go to state 54
    T_CASE         shift, and go to state 55
    T_DEFAULT      shift, and go to state 56
    T_BREAK        shift, and go to state 57
    T_CONTINUE     shift, and go to state 58
    T_PLUS_PLUS    shift, and go to state 59
    T_MINUS_MINUS  shift, and go to state 60
    '&'            shift, and go to state 61
    '+'            shift, and go to state 62
    '-'            shift, and go to state 63
    '*'            shift, and go to state 64
    '!'            shift, and go to state 65
    '~'            shift, and go to state 66
    '('            shift, and go to state 67
    '{'            shift, and go to state 43

    constant         go to state 69
    type             go to state 70
    statement_block  go to state 71
    statement        go to state 78
    expression       go to state 73


State 52

   63 expression: T_SIZEOF . '(' type ')'

    '('  shift, and go to state 79


State 53

   44 statement: T_RETURN . expression ';'
